GNOME Bugzilla – Bug 780732
view-icon-controller: stop trying to reveal nothing
Last modified: 2017-03-31 09:51:30 UTC
Currently, the flow view tries to reveal the selection even if it is empty. That can result in a crash if the selection is empty.
Created attachment 349011 [details] [review] view-icon-controller: stop trying to reveal nothing
Review of attachment 349011 [details] [review]: :(
Attachment 349011 [details] pushed as 9078c2c - view-icon-controller: stop trying to reveal nothing