view-icon-controller: stop trying to reveal nothing

Currently, the flow view tries to reveal the selection even if it is
empty. That can result in a crash if the selection is empty.

https://bugzilla.gnome.org/show_bug.cgi?id=780732